--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/xx745/youtube-to-mp3#readme",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
