--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ image:
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: yarn install
-  - command: yarn dev
+    command: yarn dev
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
