--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "homepage": "https://github.com/xx745/youtube-to-mp3#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
